To do stuff 6.aug

--- a/assets/sass/components/_bio.scss
+++ b/assets/sass/components/_bio.scss
@@ -3,10 +3,10 @@
   &__titles {
     margin-bottom: 50px;
     &-title {
-
+      // to do
     }
     &-subtitle {
-
+      // to do
     }
   }
   &__container {
@@ -27,7 +27,7 @@
       margin-bottom: 30px;
     }
     &-text {
-
+      // to do
     }
   }
 }
