in progress linking

--- a/assets/sass/components/_bio.scss
+++ b/assets/sass/components/_bio.scss
@@ -50,7 +50,7 @@
   .bio {
     margin: 70px 0 100px;
     &__wrapper {
-      padding: 0 7%;
+      padding: 20px 7%;
     }
     &__titles {
       margin-bottom: 90px;
@@ -67,7 +67,7 @@
     &__wrapper {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 0 5%;
+      padding: 20px 5% 40px;
     }
     &__titles {
       margin-bottom: 130px;
